--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<canvas id="myCanvas" width="600" height="400"></canvas>
+		<canvas id="myCanvas" width="600" height="400" style="border:1px solid #787878;"></canvas>
 		<script src="circuit_builder.js"></script>
 	</body>
 </html>
