centered web content

--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title> Circuit Builder </title>
+	</head>
 	<body>
-		<canvas id="myCanvas" width="600" height="400" style="border:1px solid #787878;"></canvas>
-		<script src="circuit_builder.js"></script>
+		<center>
+			<h1> Circuit Builder </h1>
+			<canvas id="myCanvas" width="600" height="400" style="border:1px solid #787878;"></canvas>
+		</center>
+		
+		
+
+		<script src="circuit_builder.js"></script>		
 	</body>
+
+	
+
+
+
 </html>
