circuit_builder.js now paperscript, zoom on mouse

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 			<canvas id="myCanvas" width="600" height="400" style="border:1px solid #787878;"></canvas>
 		</center>
 		
-		
-		<script src="data_structures.js"></script>
-		<script src="circuit_builder.js"></script>		
+		<script type="text/javascript" src="js/paper-full.js"></script>
+		<script type="text/javascript" src="js/data_structures.js"></script>
+		<script type="text/paperscript" src="js/circuit_builder.js" canvas="myCanvas"></script>	
 	</body>
 
 	
