drag items, select by click

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<center>
 			<h1> Circuit Builder </h1>
-			<canvas id="myCanvas" width="600" height="400" style="border:1px solid #787878;"></canvas>
+			<canvas id="myCanvas" width="600" height="400" style="border:1px solid #787878; background-color:#CCCCCC"></canvas>
 		</center>
 		
 		<script type="text/javascript" src="js/paper-full.js"></script>
