splitting circuit_builder.js

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		
 		<script type="text/javascript" src="js/paper-full.js"></script>
 		<script type="text/javascript" src="js/data_structures.js"></script>
+		<script type="text/paperscript" src="js/user_input.js" canvas="myCanvas"></script>
 		<script type="text/paperscript" src="js/circuit_builder.js" canvas="myCanvas"></script>	
 	</body>
 
